<resources>
    <string name="app_name">LancerScoutKotlin</string>
    <string name="welcome_to_lancer_scout">Welcome to Lancer Scout!</string>
    <string name="match_scouting">Match Scouting</string>
    <string name="pit_scouting">Pit Scouting</string>
    <string name="pit_templates">Pit Templates</string>
    <string name="match_templates">Match Templates</string>
    <string name="templates">Templates</string>
    <string name="reordering">Reordering</string>
    <string name="header_title">Header Title</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="start_00_00">Start 00:00</string>
    <string name="counter_title">Counter title</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="counter">Counter</string>
    <string name="unit">Unit</string>
    <string name="_0">0</string>
    <string name="item_selector_title">Item Selector Title</string>
    <string name="item_title">Item Title</string>
    <string name="checkbox_title">Checkbox Title</string>
    <string name="stopwatch_title">Stopwatch Title</string>
    <string name="save">Save</string>
    <string name="template_preferences">TEMPLATE_PREFERENCES</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="template_title">Template Title</string>
    <string name="scouting">Scouting</string>
    <string name="input_team_number">Input team number</string>
    <string name="team_number">Team Number</string>
    <string name="teams">Teams</string>
    <string name="none">None</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="search">Search</string>
</resources>
