<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/handle_view"
        layout="@layout/list_item_handle" />

    <EditText
        android:id="@+id/counter_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/counter_title"
        android:inputType="textMultiLine"
        android:layout_weight="1"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/counter_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/counter_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:hint="@string/_0"
            android:autofillHints=""
            android:inputType="number" />

        <EditText
            android:id="@+id/counter_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/unit"
            android:inputType="text" />

        <Button
            android:id="@+id/counter_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>