<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_lancer_scout"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/match_scouting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_scouting"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/pit_scouting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pit_scouting"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/template_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/templates"
        android:textColor="@android:color/black" />
</LinearLayout>